--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,11 @@
 {%- endblock %}
 
 {% block content %}
-{%- let request = request -%}
 
 <div class="container px-4 py-5">
 {%- for post in posts.values() -%}
     <article class="blog-post">
-        <h2><a href="{{ cot::reverse!(request, "post", page = post.link)? }}">{{ post.title }}</a></h2>
+        <h2><a href="{{ cot::reverse!(urls, "post", page = post.link)? }}">{{ post.title }}</a></h2>
         <p class="blog-post-meta">{{ post.date.format("%d %B %Y") }}</p>
     </article>
 {%- endfor %}
