--- a/templates/_base.html
+++ b/templates/_base.html
@@ -18,6 +18,7 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400..700;1,400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400..700;1,400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet"></noscript>
 
+    <link rel="alternate" type="application/atom+xml" title="Mateusz Maćkowski's blog" href="{{ cot::reverse!(urls, "feed")? }}">
     <link rel="icon" type="image/png" href="/static/images/favicon-512.png">
     <link rel="apple-touch-icon" href="/static/images/favicon-180.png" sizes="180x180">
     <link rel="manifest" href="/static/images/site.webmanifest">
@@ -83,7 +84,7 @@
 <footer class="theme-bg mt-auto">
     <div class="container py-3 mx-auto">
         <div class="text-start text-lg-center">
-            <p class="text-body-secondary my-0">&copy; 2010-2025 Mateusz Maćkowski. All texts on the <a href="http://creativecommons.org/licenses/by-nd/4.0/">CC-BY-ND</a> license.</p>
+            <p class="text-body-secondary my-0">&copy; 2010-2025 Mateusz Maćkowski. All texts on the <a href="http://creativecommons.org/licenses/by-nd/4.0/">CC-BY-ND</a> license. <a href="{{ cot::reverse!(urls, "feed")? }}">Atom feed</a></p>
         </div>
     </div>
 </footer>
