--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 
 {% block head -%}
     <meta name="description" content="Mateusz Maćkowski's (aka m4tx) (dev)blog.">
+    <meta name="keywords" content="devblog, home, personal, programming, rust, cot">
 {%- endblock %}
 
 {% block content %}
