--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Mateusz Maćkowski">
-    <meta name="keywords" content="devblog, home, personal, programming, rust, cot">
     <meta name="generator" content="{{ crate::consts::GENERATOR }}">
     <title>{% block title %}{% endblock %} | Mateusz Maćkowski</title>
 
@@ -84,7 +83,7 @@
 <footer class="theme-bg mt-auto">
     <div class="container py-3 mx-auto">
         <div class="text-start text-lg-center">
-            <p class="text-body-secondary my-0">&copy; 2010-2025 Mateusz Maćkowski. All texts on the <a href="http://creativecommons.org/licenses/by-nd/4.0/">CC-BY-ND</a> license. <a href="{{ cot::reverse!(urls, "feed")? }}">Atom feed</a></p>
+            <p class="text-body-secondary my-0">&copy; 2010-2025 Mateusz Maćkowski. All texts on the <a href="http://creativecommons.org/licenses/by-nd/4.0/" rel="license">CC-BY-ND</a> license. <a href="{{ cot::reverse!(urls, "feed")? }}">Atom feed</a></p>
         </div>
     </div>
 </footer>
