--- a/templates/_base.html
+++ b/templates/_base.html
@@ -9,8 +9,8 @@
     <meta name="generator" content="{{ crate::consts::GENERATOR }}">
     <title>{% block title %}{% endblock %} | Mateusz Maćkowski</title>
 
-    <script src="/static/js/color-modes.js"></script>
-    <link href="/static/css/main.css" rel="stylesheet">
+    <script src="{{ base_context.static_files.url_for("js/color-modes.js")? }}"></script>
+    <link href="{{ base_context.static_files.url_for("css/main.css")? }}" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,9 @@
     <noscript><link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400..700;1,400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet"></noscript>
 
     <link rel="alternate" type="application/atom+xml" title="Mateusz Maćkowski's blog" href="{{ cot::reverse!(urls, "feed")? }}">
-    <link rel="icon" type="image/png" href="/static/images/favicon-512.png">
-    <link rel="apple-touch-icon" href="/static/images/favicon-180.png" sizes="180x180">
-    <link rel="manifest" href="/static/images/site.webmanifest">
+    <link rel="icon" type="image/png" href="{{ base_context.static_files.url_for("images/favicon-512.png")? }}">
+    <link rel="apple-touch-icon" href="{{ base_context.static_files.url_for("images/favicon-180.png")? }}" sizes="180x180">
+    <link rel="manifest" href="{{ base_context.static_files.url_for("images/site.webmanifest")? }}">
     {%- block head -%}{%- endblock -%}
 </head>
 <body class="bg-body d-flex flex-column h-100">
@@ -61,9 +61,7 @@
                                 </button>
                             </li>
                             <li>
-                                <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
-                                    <svg class="bi me-2"><use href="#moon-stars-fill"></use></svg>Dark
-                                </button>
+                                <button type="button" class="dropdown-item d-fla
                             </li>
                             <li>
                                 <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto" aria-pressed="true">
