feat: add 2025-07-08-towards-rust-web-best-errors

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -61,7 +61,9 @@
                                 </button>
                             </li>
                             <li>
-                                <button type="button" class="dropdown-item d-fla
+                                <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
+                                    <svg class="bi me-2"><use href="#moon-stars-fill"></use></svg>Dark
+                                </button>
                             </li>
                             <li>
                                 <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto" aria-pressed="true">
