--- a/templates/post.html
+++ b/templates/post.html
@@ -1,78 +1,53 @@
 {% extends "_base.html" %}
-
-{% block title %}{{ post.title }} | Blog{% endblock %}
-
-{% block content -%}
-<div class="container">
-    <div class="row">
-        <article class="col blogpost mt-3 px-lg-3 px-xl-5 py-2" tabindex="0">
-            <header>
-                <h1>{{ post.title }}</h1>
-                <time datetime="{{ post.date.to_rfc3339() }}" class="blog-post-meta">{{ post.date.format("%d %B %Y") }}</time>
-            </header>
-
-            {%- if post.is_archived() -%}
-            <div class="alert alert-danger" role="alert">
-            {%- if post.language == "pl" -%}
-                <h4 class="alert-heading">{% include "icons/warning.svg" %} Ostrzeżenie</h4>
-
-                Ten post został <strong>opublikowany {{ post.years_ago() }} lat temu</strong>. Informacje mogą być przestarzałe, poglądy autora mogły ewoluować lub post może być nieaktualny w jakiś inny sposób. Weź to pod uwagę podczas czytania tego posta.
-            {%- else -%}
-                <h4 class="alert-heading">{% include "icons/warning.svg" %} Disclaimer</h4>
-
-                This post was <strong>published {{ post.years_ago() }} years ago</strong>. The information may no longer be current, the author's perspectives might have evolved, or the post might be outdated in some other way. Please consider this context when reading.
-            {%- endif -%}
-            </div>
-            {%- endif -%}
-
-            {%- let post = post -%}
-            {%- for lang in other_languages -%}
-            <div class="alert alert-info" role="alert">
-            {%- if lang == "pl" -%}
-                <h4 class="alert-heading">{% include "icons/flag_pl.svg" %} Post dostępny po Polsku</h4>
-
-                <a href="{{ cot::reverse!(urls, "post_with_lang", page = post.link, lang = "pl")? }}">Kliknij tutaj</a> żeby przeczytać ten post po Polsku.
-            {%- elif lang == "en" -%}
-                <h4 class="alert-heading">{% include "icons/flag_uk.svg" %} Post available in English</h4>
-
-                <a href="{{ cot::reverse!(urls, "post", page = post.link)? }}">Click here</a> to read this post in English.
-            {%- endif -%}
-            </div>
-            {%- endfor -%}
-
-            {{- post.content_html|safe -}}
-
-            {%- if post.accepts_comments() -%}
-            <section>
-                <hr>
-                <h2>Comments</h2>
-
-                Discuss this post on:
-                <ul>
-                    {% if let Some(reddit_link) = post.reddit_link %}<li><a href="{{ reddit_link }}">{% include "icons/reddit.svg" %} Reddit</a></li>{% endif %}
-                    {% if let Some(hackernews_link) = post.hackernews_link %}<li><a href="{{ hackernews_link }}">{% include "icons/hackernews.svg" %} Hacker News</a></li>{% endif %}
-                    {% if false %}<li>this website:</li>{% endif %}
-                </ul>
-
-                {%- if false -%}
-                <form action="" method="post">
-                    <div class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon1">@</span>
-                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+{%- block title -%}
+    {{ post.title }} | Blog
+{%- endblock title -%}
+{%- block content -%}
+    <div class="container">
+        <div class="row">
+            <article class="col blogpost mt-3 px-lg-3 px-xl-5 py-2" tabindex="0">
+                <header>
+                    <h1>{{ post.title }}</h1>
+                    <time datetime="{{ post.date.to_rfc3339() }}" class="blog-post-meta">{{ post.date.format("%d %B %Y") }}</time>
+                </header>
+                {%- if post.is_archived() -%}
+                    <div class="alert alert-danger" role="alert">
+                        {%- if post.language == "pl" -%}
+                            <h4 class="alert-heading">
+                                {% include "icons/warning.svg" %}
+                                Ostrzeżenie
+                            </h4>
+                            Ten post został <strong>opublikowany {{ post.years_ago() }} lat temu</strong>. Informacje mogą być przestarzałe, poglądy autora mogły ewoluować lub post może być nieaktualny w jakiś inny sposób. Weź to pod uwagę podczas czytania tego posta.
+                        {%- else -%}
+                            <h4 class="alert-heading">
+                                {% include "icons/warning.svg" %}
+                                Disclaimer
+                            </h4>
+                            This post was <strong>published {{ post.years_ago() }} years ago</strong>. The information may no longer be current, the author's perspectives might have evolved, or the post might be outdated in some other way. Please consider this context when reading.
+                        {%- endif -%}
                     </div>
-
-                    <textarea class="form-control" aria-label="With textarea" placeholder="Comment"></textarea>
-
-                    <p>You may use <a href="https://commonmark.org/help/">Markdown</a> in your comment.</p>
-
-                    <p>This site uses Akismet to reduce spam. <a href="https://akismet.com/privacy/">Learn how your comment data is processed.</a></p>
-
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
                 {%- endif -%}
-            </section>
-            {%- endif -%}
-        </article>
+                {%- let post = post -%}
+                {%- for lang in other_languages -%}
+                    <div class="alert alert-info" role="alert">
+                        {%- if lang == "pl" -%}
+                            <h4 class="alert-heading">
+                                {% include "icons/flag_pl.svg" %}
+                                Post dostępny po Polsku
+                            </h4>
+                            <a href="{{ cot::reverse!(urls, "post_with_lang", page = post.link, lang = "pl")? }}">Kliknij tutaj</a> żeby przeczytać ten post po Polsku.
+                        {%- elif lang == "en" -%}
+                            <h4 class="alert-heading">
+                                {% include "icons/flag_uk.svg" %}
+                                Post available in English
+                            </h4>
+                            <a href="{{ cot::reverse!(urls, "post", page = post.link)? }}">Click here</a> to read this post in English.
+                        {%- endif -%}
+                    </div>
+                {%- endfor -%}
+                {{- post.content_html|safe -}}
+                {%- include "_post_comments.html" -%}
+            </article>
+        </div>
     </div>
-</div>
-{%- endblock %}
+{%- endblock content -%}
