--- a/templates/md_page.html
+++ b/templates/md_page.html
@@ -1,15 +1,14 @@
 {% extends "_base.html" %}
-
-{% block title %}{{ page.title }}{% endblock %}
-
-{% block content -%}
-<div class="container">
-    <div class="row">
-        <div class="col blogpost mt-3 px-lg-3 px-xl-5" tabindex="0">
-            <h1>{{ page.title }}</h1>
-
-            {{- page.content_html|safe -}}
+{%- block title -%}
+    {{ page.title }}
+{%- endblock title -%}
+{%- block content -%}
+    <div class="container">
+        <div class="row">
+            <div class="col blogpost mt-3 px-lg-3 px-xl-5" tabindex="0">
+                <h1>{{ page.title }}</h1>
+                {{- page.content_html|safe -}}
+            </div>
         </div>
     </div>
-</div>
-{%- endblock %}
+{%- endblock content -%}
