--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
-{% block title %}
-    Home
-{% endblock title %}
+{% block full_title %}
+    Mateusz Maćkowski
+{% endblock full_title %}
 {% block head -%}
     <meta name="description"
           content="Mateusz Maćkowski's (aka m4tx) (dev)blog.">
