chore: retrieve current year for the footer

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -58,7 +58,7 @@
                                 <use href="#cc"></use>
                             </svg>
                         </span>
-                        2010-2025 Mateusz Maćkowski. All texts on the <a href="https://creativecommons.org/licenses/by-nd/4.0/" rel="license">CC-BY-ND</a> license. <a href="{{ cot::reverse!(urls, "feed")? }}">Atom feed</a>
+                        2010-{{ template_util::current_year() }} Mateusz Maćkowski. All texts on the <a href="https://creativecommons.org/licenses/by-nd/4.0/" rel="license">CC-BY-ND</a> license. <a href="{{ cot::reverse!(urls, "feed")? }}">Atom feed</a>
                     </p>
                 </div>
             </div>
